--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -628,7 +628,7 @@ span.disableBtn input{cursor: not-allowed}
 
 
 /*按疾病挂号页面*/
-.nav{ width: 100%;height: 36px; min-width: 1000px;background-color: #60bff2;}
+.nav{ width: 100%;height: 36px; min-width: 1000px;background-color: #60bff2;overflow: hidden;}
 .nav_box{width: 1000px;height: 36px;margin: 0 auto;}
 .nav_ul {
     width: 864px;
@@ -984,3 +984,4 @@ li.personalCenter{float: right;}
     text-align: center;
     font-size: 14px;
 }
+.tableContent{overflow: hidden;}
