--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -628,7 +628,7 @@ span.disableBtn input{cursor: not-allowed}
 
 
 /*按疾病挂号页面*/
-.nav{ width: 100%;height: 36px; min-width: 1000px;background-color: #60bff2;overflow: hidden;}
+.nav_index{ width: 100%;height: 36px; min-width: 1000px;background-color: #60bff2;overflow: hidden;}
 .nav_box{width: 1000px;height: 36px;margin: 0 auto;}
 .nav_ul {
     width: 864px;
@@ -831,7 +831,11 @@ span.disableBtn input{cursor: not-allowed}
 
 /*个人中心*/
 li.personalCenter{float: right;}
-
+.personalBox{width: 1000px;margin:0 auto;margin-top: 10px;overflow: hidden;}
+/*个人中心-个人信息*/
+div.individual div.formInputBox>input,div.safety div.formInputBox>input{height: 32px}
+.individual button,.safety button{width: 70px; height: 36px;border: none;border-radius: 5px;margin-left: 220px;margin-top: 20px}
+.patientTable{margin-top: 19px}
 /*用户注册*/
 .formgroup .errhint{color: red; font-size: 12px; font-weight: bold; display: none; width: 100%; height: 100%; position: absolute; left: 0; top: 0; z-index: 1000; background: #fff;}
 .registerBox{
