个人中心更改

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1006,3 +1006,14 @@ div.individual div.formInputBox>input,div.safety div.formInputBox>input{height: 
     font-size: 14px;
 }
 .tableContent{overflow: hidden;}
+/*病人信息*/
+.patientInfo .patientInfoHead{margin-top: 14px}
+.patientTable .box{
+    position: relative;
+    border-radius: 3px;
+    background: #ffffff;
+    border-top: 3px solid #d2d6de;
+    margin-bottom: 20px;
+    width: 100%;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+}
