--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1054,7 +1054,7 @@ div.gh_workTime>table td>input{margin: 4px 0 0;cursor: pointer;}
 div.selectPatient>span{display: inline-block;width: 100px;line-height: 24px;background: #50bde8;color: #fff;cursor: pointer;text-align: center;}
 .selectPatientTable{border-collapse: collapse;max-width: 80%;margin-top: 19px}
 .selectPatientTable>tbody>tr{width: 800px}
-.selectPatientTable>tbody td{line-height: 24px;text-align: center;}
+.selectPatientTable>tbody td{line-height: 24px;text-align: left;}
 .selectPatientTable .sone{width: 60px}
 .selectPatientTable .stwo{width: 120px}
 .selectPatientTable .sthree{width: 120px}
@@ -1064,5 +1064,5 @@ div.selectPatient>span{display: inline-block;width: 100px;line-height: 24px;back
 .selectPatientTable>tbody>tr:nth-of-type(even) td{background: #fff}
 /*.selectPatientTable>tbody>tr:nth-child(even){background: #fff}
 .selectPatientTable>tbody>tr:nth-child(odd){background: #ccc}*/
-.selectPatientContent{display: none}
+/*.selectPatientContent{display: none}*/
 .gh_form .btnBox{width: 1000px ;margin: 0 auto;margin-top: 19px;overflow: hidden;}
